--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,5 +1,6 @@
 * {
   padding: 0;
+  box-sizing: border-box;
 }
 
 .home-section {
@@ -10,6 +11,10 @@
 .container {
   background-image: url("../assets/FINANCIAL_PROJECT.jpg");
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: 2px solid black;
+  width: 100%;
   height: 200px;
   display: flex;
   flex-direction: column;
@@ -25,7 +30,7 @@
 .arrow-icon {
   font-size: 24px;
   align-self: flex-end;
-  margin-right: 6%;
+  margin-right: 6px;
 }
 
 .company-name {
@@ -44,9 +49,7 @@
 
 @media screen and (min-width: 716px) {
   .home-section {
-    padding: 20px;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1%;
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
   }
 
   .arrow-icon {
